# 2d-metaverse

./: .gitignore  PRD.md  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: test.yml  tests.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/game/scenes/: MainScene.tsx
frontend/src/pages/: Login.tsx  Metaverse.tsx
src/: pytest.ini  settings.py
src/api/: admin.py  consumers.py  load_to_db.py  models.py  routing.py  serializers.py  urls.py  views.py  websockets.py
src/api/migrations/: 0001_initial.py
src/api/static/api/css/: metaverse.css
src/api/static/api/js/: metaverse.js
src/api/templates/api/: hi.html  metaverse.html  room.html  rooms.html
src/api/tests/: test_admin_create_avatar.py  test_get_Avatar_by_id.py  test_views.py
src/home/: asgi.py  settings.py  urls.py
