[tool.poetry]
name = "2d-metaverse"
version = "0.1.0"
description = ""
authors = ["skyspec28 <maulomepelumi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}] 
[tool.poetry.dependencies]
python = "^3.11"
django = ">=5.1.5,<6.0.0"
requests = ">=2.32.3,<3.0.0"
selenium = ">=4.28.1,<5.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
django-allauth = {extras = ["socialaccount"], version = ">=65.3.1,<66.0.0"}
djangorestframework-simplejwt = ">=5.4.0,<6.0.0"
python-decouple = ">=3.8,<4.0"
markdown = ">=3.7,<4.0"
django-filter = ">=24.3,<25.0"
cryptography = ">=44.0.0,<45.0.0"
pytest-django = "^4.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
